[gd_scene load_steps=6 format=2]

[ext_resource path="res://common/gui/ui-theme.tres" type="Theme" id=1]
[ext_resource path="res://common/gui/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://addons/sound_button/hover.wav" type="AudioStream" id=4]
[ext_resource path="res://addons/sound_button/click.wav" type="AudioStream" id=5]
[ext_resource path="res://common/sfx/menu-button-appear.wav" type="AudioStream" id=6]

[node name="MenuButton" type="Button"]
pause_mode = 2
margin_right = 120.0
margin_bottom = 26.0
theme = ExtResource( 1 )
text = "Button"
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="appearTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="sfxHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Ui"

[node name="sfxClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Ui"

[node name="sfxAppear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Ui"

[node name="Tween" type="Tween" parent="."]
[connection signal="focus_entered" from="." to="." method="_on_MenuButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MenuButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MenuButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_MenuButton_pressed"]
[connection signal="visibility_changed" from="." to="." method="_on_MenuButton_visibility_changed"]
[connection signal="timeout" from="appearTimer" to="." method="_on_appearTimer_timeout"]
